Fix github link in dark mode

--- a/css/site.css
+++ b/css/site.css
@@ -5,6 +5,11 @@
     --pico-spacing: 0.25rem;
 }
 
+header img {
+    @media (prefers-color-scheme: dark) {
+        filter: invert();
+    }
+}
 
 .hidden {
     visibility: hidden;
